# module-coreModules

./: .gitignore  template.cpp
include/: coreModules.hpp
proj/cmake/: CMakeLists.txt
src/: coreModules.cpp  template.cpp  video.cpp
